@@ -214,6 +214,10 @@ class GalileoClient(object):
         except requests.exceptions.ConnectionError as ce:
             error_msg = ConnectionErrorToMessage(ce)
             raise SyncError('ConnectionError: %s' % error_msg)
+        except requests.exceptions.HTTPError as he:
+            status_code = he.response.status_code
+            msg = he.args[0]
+            raise SyncError("HTTPError: %s (%d)" % (msg, status_code))
 
         tracker = None
         for elem in server:
